force-app/main/default/objects/synety__New_Record_Page__c/synety__New_Record_Page__c.object-meta.xml
<CustomObject>
    <label>CloudCall New Record Page</label>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CloudCall New Record Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>