force-app/main/default/objects/synety__New_Record_Page__c/fields/synety__Call_From_Var_Name__c.field-meta.xml
<CustomField>
    <fullName>synety__Call_From_Var_Name__c</fullName>
    <label>Call From Querystring Var Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>