force-app/main/default/objects/synety__New_Record_Page__c/fields/synety__VF_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>synety__VF_Page_Name__c</fullName>
    <label>VF Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>